# nyc-taxi-real-time-analytics

./: .gitignore  docker-compose.yml  pyproject.toml
monitoring/pormetheus/: prometheus.yml
real-time-etl/: pyproject.toml
real-time-etl/src/pinot/: gps_data_realtime_table_config.json  gps_data_schema.json
simulated-gps-producer/: pyproject.toml
simulated-gps-producer/src/: generate_gps_data.py  schema.py
simulated-gps-producer/src/dags/: produce_events.py
simulated-gps-producer/src/data/: taxi_zones.geojson
simulated-gps-producer/tests/: test_generate_gps_data.py
